responsive for mobile size

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Nav -->
     <nav class="navbar navbar-expand-md d-flex flex-grow-1 sticky-top navbar-dark bg-success">
         <div class="container-fluid"> <a class="navbar-brand align-items-center" href="#">
-            <img src="images/seed.png" alt="">
+            <img src="images/seed.png" alt="logo">
             
           </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10" style="">
             <span class="navbar-toggler-icon"></span>
