--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,20 @@
     <!-- Nav -->
     <nav class="navbar navbar-expand-md d-flex flex-grow-1 sticky-top navbar-dark bg-success">
         <div class="container-fluid"> <a class="navbar-brand align-items-center" href="#">
-            <img src="images/seed.png" alt="logo">
+            <img src="images/favicon-1.png" alt="logo" style="width: 40px; height: 40px;">
             
           </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar10" style="">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbar10">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#"><b>HOME</b></a></li>
-                <li class="nav-item" id="about-us"> <a class="nav-link" href="#"><b>ABOUT US</b></a> </li>
+                <li class="nav-item"><a class="nav-link" href="#"><b>Home</b></a></li>
+                <li class="nav-item"> <a class="nav-link" href="#about-us"><b>About Us</b></a> </li>
                 <li class="nav-item text-white"> <a class="nav-link" href="#" id="faq"><b>FAQ</b></a> </li>
                 <li class="nav-item text-white"> <a class="nav-link" href="#" id="faq"><i class="fab fa-facebook"></i></a> </li>
                 <li class="nav-item text-white"> <a class="nav-link" href="#" id="faq"><i class="fab fa-twitter"></i></a> </li>
-              <li class="nav-item"><a class="nav-link" href="#"><b>CONTACT US</b></a></li>
-              <li class="nav-item"><a class="nav-link" href="signUpFarmer.html"><b>SIGN UP AS A FARMER</b></a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact-us"><b>Contact Us</b></a></li>
+              <li class="nav-item"><a class="nav-link" href="signUpFarmer.html"><b>Sign Up As a Farmer</b></a></li>
             </ul>
             <a href="https://paystack.com/pay/donateaseed" class="btn navbar-btn ml-md-2 btn-light text-dark"><b><b>DONATE A SEED</b></b></a>
           </div>
@@ -60,22 +60,38 @@
                     A profound change of the global food and agriculture system is needed if we are to nourish the 821 million people who are hungry today and the additional 2 billion people expected to be undernourished by 2050. <br>
                     Right now, our soils, freshwater, oceans, forests and biodiversity are being rapidly degraded. Climate change is putting even more pressure on the resources we depend on, increasing risks associated with disasters, such as droughts and floods. Many rural women and men can no longer make ends meet on their land, forcing them to migrate to cities in search of opportunities. Poor food security is also causing millions of children to be stunted, or too short for the ages, due to severe malnutrition <a href="https://www.un.org/sustainabledevelopment/hunger/"><span>United Nation</span></a>. Let's help our Farmers by donating a <strong>SEED</strong>.
                 </p>
-               <a href="https://paystack.com/pay/donateaseed"><button class="btn btn-primary btn-lg"><strong>Donate Now</strong></button></a>
+               <a href="https://paystack.com/pay/donateaseed"  target="_blank"><button class="btn btn-primary btn-lg"><strong>Donate Now</strong></button></a>
                 </div>
          </div>
      </main>
-
+     <main style="border: 3px solid green; margin: 5px;" id="about-us" >
+      <div class="py-5" >
+        <div class="container">
+          <div class="row">
+            <div class="col-md-10">
+              <h3 class="text-uppercase display-4" >about us</h3>
+            <p style="font-size: 20px;">An initiative / Platform led by SDG Developers with a goal to seek for seeds for farmers for plantation in the aim to end zero hunger on the less privileged ones during this pandemic time and beyond.</p>  
+            </div>
+          </div>
+        </div>
+      </div>
+     </main>
      <!-- Main Second -->
-     <main>
+     <main class="m-5 p-5 border-radius" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(images/beautiful.jpg);	background-position: center center, center center;	background-size: cover, cover;	background-repeat: repeat, repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="display-4 text-uppercase" style="color: white;"><strong>our goal</strong></h1>
+        </div>
+      </div>
          <div class="div-flex main-container ">
-             <div class="first border-radius">
+             <div class="first border-radius border-line" style="border: 1px solid white;">
                 <span>Livehood</span>
              </div>
-             <div class="second border-radius">
+             <div class="second border-radius" style="border: 1px solid white;">
                 <span>Natural Remedies</span>
              </div>
-             <div class="third border-radius">
-                <span>New Improved Seeds</span>
+             <div class="third border-radius" style="border: 1px solid white;">
+                <span >New Improved Seeds</span>
              </div>
 
          </div>
@@ -83,13 +99,32 @@
 
      <!-- Main Third -->
      <main>
-         <div class="main-third">
+         <div class="main-third" >
           <div >
             <p>WE NEED YOUR HELP</p>
              <h3>LET’S STOP THIS HUNGER AND <br> FULLFILL THEIR HAPPINESS</h3>
              <a href="https://www.un.org/sustainabledevelopment/hunger/" target="_blank"><button class="btn btn-primary btn-lg">Learn More</button></a>
             </div>     
         </div>
+     </main>
+     <main id="contact-us">
+      <div class="py-3 text-center" >
+        <div class="container">
+          <div class="row">
+            <div class="mx-auto p-4 col-lg-7 shadow rounded" >
+              <h1 class="mb-4 text-capitalize">contact us</h1>
+              <form>
+                <div class="form-row">
+                  <div class="form-group col-md-6 text-dark"> <input type="text" class="form-control text-dark" id="form27" placeholder="Name" required="required"> </div>
+                  <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required"> </div>
+                </div>
+                <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject"> </div>
+                <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message"></textarea> </div> <button type="submit" class="btn btn-primary text-light">Send</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
      </main>
      <main class="seed-seller">
        <div class="seller-div">
